<resources>
    <string name="app_name">Ecommerce</string>
    <string name="spinner_category_default_value">Select Category</string>
    <string name="about_us">About Us</string>
    <string name="thanks_for_using_our_napplication">Thanks for using our \nApplication</string>
    <string name="dicky_wisnu_d_w">Dicky Wisnu D W</string>
    <string name="jvan_ks05_014">JVAN-KS05-014</string>
    <string name="aria_dwika_w">Aria Dwika W</string>
    <string name="jvan_ks05_013">JVAN-KS05-013</string>
    <string name="ana_milatul_k">Ana Milatul K</string>
    <string name="jvan_ks05_018">JVAN-KS05-018</string>
    <string name="salwa_salsabila">Salwa Salsabila</string>
    <string name="jvan_ks05_010">JVAN-KS05-010</string>
    <string name="jvan_ks05">JVAN-KS05</string>
    <string name="staff_registration">Staff Registration</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="add_staff">Add Staff</string>
    <string name="add_stock">Add Stock</string>
    <string name="item_name">Item Name</string>
    <string name="item_description">Item Description</string>
    <string name="item_price">Item Price</string>
    <string name="item_quantity">Item Quantity</string>
    <string name="choose_image">Choose Image</string>
    <string name="add_item">Add Item</string>
    <string name="hello">Hello</string>
    <string name="have_nice_day">Have nice day!</string>
    <string name="logout">Logout</string>
    <string name="add_staff2">Add Staff</string>
    <string name="add_stock2">Add Stock</string>
    <string name="rp_1800000">Rp 1800000</string>
    <string name="televisi">Televisi</string>
    <string name="stock">Stock :</string>
    <string name="description">Description</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="hello_there_login_to_continue">Hello there, login to continue</string>
    <string name="emaillog">Email</string>
    <string name="passwordlog">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don’t have an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="category">Category:</string>
    <string name="create_an_account_to_continue">Create an account to continue</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="do_the_best_for_your_work">Do the best for your work</string>
    <string name="product_category">Product Category</string>
    <string name="name_category">name category</string>
</resources>