<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".Login.SignupActivity">

    <ImageView
        android:id="@+id/dekor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_vc_dekor1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="227dp"
        android:layout_height="227dp"
        android:layout_marginTop="-42dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSignup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="55dp"
        android:text="@string/hello"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:fontFamily="@font/tahoma_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dekor1" />

    <TextView
        android:id="@+id/tvSignup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/create_an_account_to_continue"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:fontFamily="@font/tahoma_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSignup1" />

    <EditText
        android:id="@+id/txtRegisName"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        android:background="@drawable/radius_textbox"
        android:hint="@string/full_name"
        android:elevation="5dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/tahoma_regular"
        app:layout_constraintTop_toBottomOf="@id/tvSignup2"/>

    <EditText
        android:id="@+id/txtRegisEmail"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:background="@drawable/radius_textbox"
        android:hint="@string/email"
        android:elevation="5dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/tahoma_regular"
        app:layout_constraintTop_toBottomOf="@+id/txtRegisName" />

    <EditText
        android:id="@+id/txtRegisPass"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        android:inputType="textPassword"
        android:background="@drawable/radius_textbox"
        android:hint="@string/password"
        android:elevation="5dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/tahoma_regular"
        app:layout_constraintTop_toBottomOf="@+id/txtRegisEmail" />

    <EditText
        android:id="@+id/txtRegisConfirm"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        android:inputType="textPassword"
        android:background="@drawable/radius_textbox"
        android:hint="@string/confirm_password"
        android:elevation="5dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/tahoma_regular"
        app:layout_constraintTop_toBottomOf="@+id/txtRegisPass" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:cornerRadius="10dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:fontFamily="@font/tahoma_regular"
        app:layout_constraintTop_toBottomOf="@id/txtRegisConfirm" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/btnRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tvSignup3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/tahoma_regular"
            android:text="@string/already_have_an_account"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvLogin"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/login"
            android:textSize="15sp"
            android:textColor="@color/yellow"
            android:textStyle="bold"
            android:fontFamily="@font/tahoma_regular"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvSignup3"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>