<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".User.DetailProductActivity">

    <ImageView
        android:id="@+id/ivProductPic"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:scaleType="centerCrop"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvProductPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="16dp"
        android:includeFontPadding="false"
        android:text="@string/rp_1800000"
        android:textAlignment="textEnd"
        android:textColor="@color/green"
        android:textStyle="bold"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvProductName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="12dp"
        android:includeFontPadding="false"
        android:fontFamily="@font/tahoma_bold"
        android:text="@string/televisi"
        android:textColor="@color/green"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:includeFontPadding="false"
            android:fontFamily="@font/tahoma_semibold"
            android:text="@string/stock"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvProductQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:includeFontPadding="false"
            android:fontFamily="@font/tahoma_semibold"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvProductDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:fontFamily="@font/tahoma_regular"
        android:layout_marginTop="12dp"
        android:includeFontPadding="false"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textSize="20sp" />
</LinearLayout>